this is a mess, but have request for getting account balance finished

--- a/view/register.html
+++ b/view/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>My first nodejs website</title>
     <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src = "/../public/js/script.js"></script>
+    <script src = "/../controllers/script.js"></script>
 </head>
 <body>
     
