--- a/view/index.html
+++ b/view/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>My first NodeJS Website</title>
     <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src = "/../public/js/script.js"></script>
+    <script src = "/../controllers/script.js"></script>
 </head>
 <body onload = "getPublicItems()">
     <div>
