--- a/view/home.html
+++ b/view/home.html
@@ -28,7 +28,7 @@
                 <p>Sender Address <input type = "text" class = "sendAddress"/> </p>
                 <p>Recipent Address <input type = "text" class = "recpAddress"/> </p>
                 <p>Amount <input type = "number" class = "txAmount"/></p>
-                <input type = "button" onclick = "addPOP()" value = "Submit Transaction"/>
+                <input type = "button" onclick = "addTransaction()" value = "Submit Transaction"/>
             </form>
         <!-- possible table to show transaction history, or block history, etc -->
         
