cleaned up code and console.logs

--- a/view/home.html
+++ b/view/home.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title> My first Nodejs website</title>
+        <title> CarbonChain Home</title>
         <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src = "./../controllers/script.js"></script>
     </head>
-    <body onload = "getUser()">
+    <body onload = "getUser()" >
         <p> Hello! <span class = "username"></span>! </p>
         <p> <a href = "/logout">Logout</a></p>
             <form>
