--- a/view/index.html
+++ b/view/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>My first NodeJS Website</title>
+    <title>Carbon Chain</title>
     <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src = "/../controllers/script.js"></script>
 </head>
-<body onload = "getPublicItems()">
+<body> 
     <div>
         <form>
             <p> Username <input type = "text" class = "username"\></p>
