--- a/view/register.html
+++ b/view/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
-    <title>My first nodejs website</title>
+    <title>CarbonChain Registration</title>
     <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src = "/../controllers/script.js"></script>
 </head>
