--- a/view/home.html
+++ b/view/home.html
@@ -5,7 +5,7 @@
         <script src = "./../controllers/script.js"></script>
     </head>
     <body onload = "getUser()" >
-        <p> Hello! <span class = "username"></span>! </p>
+        <p> Hello! <span class = "username"></span> </p>
         <p> <a href = "/logout">Logout</a></p>
             <form>
                 <p>Customer Address <input type = "text" class = "account"\> </p>
