--- a/view/index.html
+++ b/view/index.html
@@ -1,18 +1,36 @@
 <html>
-<head>
-    <title>Carbon Chain</title>
-    <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src = "/../controllers/script.js"></script>
-</head>
-<body> 
-    <div>
-        <form>
-            <p> Username <input type = "text" class = "username"\></p>
-            <p> Password <input type = "password" class = "password"\></p>
-            <input type = "button" onclick = "loginUser()" value = "Login"/>
-        </form>
-
-        <p>Not registered? <a href = "/register"> Click here to create an account.</a></p>
-    </div>    
-</body>
+    <head>
+        <title> CarbonChain Home</title>
+        <script src = "https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src = "./../controllers/script.js"></script>
+    </head>
+    <body onload = "getUser()" >
+        <p> Hello! <span class = "username"></span> </p>
+        <p> <a href = "/logout">Logout</a></p>
+            <form>
+                <p>Customer Address <input type = "text" class = "account"\> </p>
+                <input type = "button" onclick = getBalance() value = "Get Account Balance"/> 
+            </form>
+            <div>
+                <span class = "balance"></span>
+            </div>
+            <form>
+                <!-- form to submit a pop -->
+                <p>Customer Address <input type = "text" class = "customerAddress"/> </p>
+                <p>Business Address <input type = "text" class = "businessAddress" /> </p>
+                <p>Purchase Amount <input type = "number" class = "popAmt"/></p>
+                <input type = "button" onclick="addPOP()" value = "Submit Proof of Purchase"/>
+            </form>
+            </br>
+            <form>
+                <!-- form to submit a transaction -->
+                <!-- will be a customer to business a majority of time, but labeled as sender and reciver -->
+                <p>Sender Address <input type = "text" class = "sendAddress"/> </p>
+                <p>Recipent Address <input type = "text" class = "recpAddress"/> </p>
+                <p>Amount <input type = "number" class = "txAmount"/></p>
+                <input type = "button" onclick = "addTransaction()" value = "Submit Transaction"/>
+            </form>
+        <!-- possible table to show transaction history, or block history, etc -->
+        
+    </body>
 </html>
